@@ -31,11 +31,7 @@ export MYSQL_RC_SCRIPT_NAME='mysql'
 
 # MySQL config file.
 if [ X"${DISTRO}" == X'RHEL' ]; then
-    if [ X"${DISTRO_VERSION}" == X'6' ]; then
-        export MYSQL_RC_SCRIPT_NAME='mysqld'
-    else
-        export MYSQL_RC_SCRIPT_NAME='mariadb'
-    fi
+    export MYSQL_RC_SCRIPT_NAME='mariadb'
 
 elif [ X"${DISTRO}" == X'UBUNTU' -o X"${DISTRO}" == X'DEBIAN' ]; then
     export MYSQL_MY_CNF='/etc/mysql/my.cnf'
