@@ -56,11 +56,7 @@ export OPENLDAP_ARGS_FILE='/var/run/openldap/slapd.args'
 
 # Configure.
 if [ X"${DISTRO}" == X'RHEL' ]; then
-    if [ X"${DISTRO_VERSION}" == X'6' ]; then
-        export OPENLDAP_SYSCONFIG_CONF="${ETC_SYSCONFIG_DIR}/ldap"
-    else
-        export OPENLDAP_SYSCONFIG_CONF="${ETC_SYSCONFIG_DIR}/slapd"
-    fi
+    export OPENLDAP_SYSCONFIG_CONF="${ETC_SYSCONFIG_DIR}/slapd"
 
     # Module related.
     export OPENLDAP_MODULE_PATH='/usr/lib/openldap'
